# cpop

./: .env.example  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  EVOLUTION_PLAN.md  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  WRITERSLOGIC.md  audit-todo.md  build.rs  completed.md  deny.toml  rust_out  t.txt.cpop  t.txt.report.html  test.txt.report.html  todo.md  tsconfig.json
apps/cpop_cli/: CITATION.cff  Cargo.toml  README.md  install.sh
apps/cpop_cli/.github/workflows/: release.yml  update-package-managers.yml
apps/cpop_cli/browser-extension/: background.js  content.js  install-native-host.ps1  install-native-host.sh  manifest-firefox.json  manifest.json  options.js  popup.html  popup.js  secure-channel.js
apps/cpop_cli/src/: cli.rs  cmd_attest.rs  cmd_commit.rs  cmd_config.rs  cmd_daemon.rs  cmd_export.rs  cmd_fingerprint.rs  cmd_identity.rs  cmd_init.rs  cmd_link.rs  cmd_log.rs  cmd_presence.rs  cmd_status.rs  cmd_track.rs  cmd_verify.rs  main.rs  native_messaging_host.rs  output.rs  smart_defaults.rs  spec.rs  util.rs
apps/cpop_cli/src/cmd_export/: mod.rs
apps/cpop_cli/src/cmd_track/: checkpoint.rs  filesystem.rs  mod.rs
apps/cpop_cli/src/native_messaging_host/: handlers.rs  jitter.rs  mod.rs  protocol.rs  tests.rs  types.rs
apps/cpop_cli/tests/: cli_e2e.rs  test_application.rs  test_commit_verify.rs  test_error_paths.rs  test_export.rs  test_identity.rs  test_nmh.rs  test_track.rs
apps/cpop_cli/tests/common/: mod.rs
apps/wld_cli/: Cargo.toml  README.md  install.sh
apps/wld_cli/browser-extension/: background.js  content.js  manifest-firefox.json  manifest.json  options.html  options.js  popup.css  secure-channel.js
apps/wld_cli/packaging/linux/: README-LINUX-PACKAGING.md
apps/wld_cli/src/: cli.rs  cmd_attest.rs  cmd_commit.rs  cmd_config.rs  cmd_daemon.rs  cmd_export.rs  cmd_fingerprint.rs  cmd_identity.rs  cmd_init.rs  cmd_log.rs  cmd_presence.rs  cmd_session.rs  cmd_status.rs  cmd_track.rs  cmd_verify.rs  cmd_watch.rs  main.rs  native_messaging_host.rs  output.rs  smart_defaults.rs  spec.rs  util.rs
apps/wld_cli/tests/: cli_e2e.rs
crates/cpop-protocol/: Cargo.toml  README.md
crates/cpop-protocol/benches/: codec_bench.rs
crates/cpop-protocol/examples/: simple_attestation.rs
crates/cpop-protocol/src/: baseline.rs  c2pa.rs  compact_ref.rs  crypto.rs  error.rs  evidence.rs  identity.rs  wasm.rs
crates/cpop-protocol/src/codec/: cbor.rs  mod.rs
crates/cpop-protocol/src/forensics/: engine.rs  mod.rs  transcription.rs
crates/cpop-protocol/src/rfc/: checkpoint.rs  fixed_point.rs  jitter_binding.rs  mod.rs  packet.rs  time_evidence.rs
crates/cpop-protocol/src/war/: ear.rs  encoding.rs  mod.rs  types.rs
crates/cpop-protocol/tests/: cpop_tests.rs  e2e.rs  integration_test.rs
crates/cpop_protocol/: ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/cpop_protocol/benches/: codec_bench.rs
crates/cpop_protocol/certs/: protocol_test.cnf  test_cert.pem
crates/cpop_protocol/examples/: simple_attestation.rs
crates/cpop_protocol/fuzz/: Cargo.toml
crates/cpop_protocol/fuzz/fuzz_targets/: decode_fuzzer.rs
crates/cpop_protocol/src/: baseline.rs  c2pa.rs  error.rs  evidence.rs  lib.rs  wasm.rs
crates/cpop_protocol/src/forensics/: engine.rs  transcription.rs
crates/cpop_protocol/tests/: integration_test.rs  pop_tests.rs  wld_tests.rs
crates/witnessd_protocol/: ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/witnessd_protocol/benches/: codec_bench.rs
crates/witnessd_protocol/certs/: README.md  protocol_test.cnf  test_key.pem
crates/witnessd_protocol/examples/: simple_attestation.rs
crates/witnessd_protocol/fuzz/: Cargo.toml
crates/witnessd_protocol/fuzz/fuzz_targets/: decode_fuzzer.rs
crates/witnessd_protocol/src/: baseline.rs  c2pa.rs  codec.rs  crypto.rs  error.rs  evidence.rs  identity.rs  lib.rs  rfc.rs  wasm.rs
crates/witnessd_protocol/src/forensics/: engine.rs  mod.rs  transcription.rs
crates/witnessd_protocol/tests/: integration_test.rs  pop_tests.rs  witnessd_tests.rs
crates/wld_engine/: Cargo.toml
crates/wld_engine/src/: api_types.rs  checkpoint_mmr.rs  collaboration.rs  compact_ref.rs  continuation.rs  crypto.rs  engine.rs  error.rs  lib.rs  provenance.rs  sealed_chain.rs  timing.rs  transcription.rs
crates/wld_engine/src/analysis/: active_probes.rs  behavioral_fingerprint.rs  error_topology.rs  hurst.rs  labyrinth.rs  mod.rs  perplexity.rs  pink_noise.rs  stats.rs
crates/wld_engine/src/anchors/: bitcoin.rs  ethereum.rs  mod.rs  notary.rs  rfc3161.rs  tests.rs  types.rs  verification.rs
crates/wld_engine/src/baseline/: digest.rs  mod.rs  streaming.rs  tests.rs  verification.rs
crates/wld_engine/src/calibration/: transport.rs
crates/wld_engine/src/checkpoint/: chain.rs  tests.rs  types.rs
crates/wld_engine/src/codec/: cbor.rs  json.rs  mod.rs
crates/wld_engine/src/config/: defaults.rs  loading.rs  mod.rs  tests.rs  types.rs
crates/wld_engine/src/crypto/: anti_analysis.rs  mem.rs  obfuscated.rs  obfuscation.rs
crates/wld_engine/src/declaration/: builder.rs  helpers.rs  mod.rs  tests.rs  types.rs  verification.rs
crates/wld_engine/src/evidence/: builder.rs  mod.rs  packet.rs  rfc_conversion.rs  tests.rs  types.rs  wire_conversion.rs
crates/wld_engine/src/ffi/: attestation.rs  ephemeral.rs  evidence.rs  fingerprint.rs  forensics.rs  helpers.rs  mod.rs  sentinel.rs  steganography_ffi.rs  system.rs  types.rs  writersproof_ffi.rs
crates/wld_engine/src/fingerprint/: activity.rs  author.rs  comparison.rs  consent.rs  manager.rs  mod.rs  storage.rs  voice.rs
crates/wld_engine/src/forensics/: analysis.rs  assessment.rs  cadence.rs  comparison.rs  cross_modal.rs  error.rs  forgery_cost.rs  mod.rs  tests.rs  topology.rs  types.rs  velocity.rs
crates/wld_engine/src/identity/: apple.rs  mnemonic.rs  secure_storage.rs
crates/wld_engine/src/ipc/: async_client.rs  crypto.rs  messages.rs  secure_channel.rs  server.rs  sync_client.rs  (+2 more)
(+1905 files in other folders)
