[package]
name = "cpop_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
description = "Command-line interface for cryptographic authorship witnessing"
publish = false
readme = "README.md"
keywords = ["cli", "authorship", "witnessing", "attestation", "proof-of-process"]
categories = ["command-line-utilities"]
rust-version = "1.75.0"
homepage = "https://github.com/writerslogic/cpop"
documentation = "https://github.com/writerslogic/cpop/tree/main/apps/cpop_cli"
exclude = ["tests/", "browser-extension/"]

[[bin]]
name = "cpop"
path = "src/main.rs"

[[bin]]
name = "writerslogic-native-messaging-host"
path = "src/native_messaging_host.rs"

[features]
default = []
cpop_jitter = ["cpop_engine/cpop_jitter"]

[dependencies]
cpop_engine = { path = "../../crates/cpop_engine", features = ["ffi"] }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
ed25519-dalek = "2.1"
sha2 = "0.10"
getrandom = "0.2"
hostname = "0.4"
notify = "6.1"
glob = "0.3"
tempfile = "3.10"
url = "2.5"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
ctrlc = "3.4"
dialoguer = "0.11"
fs2 = "0.4"
