[package]
name = "wld_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
description = "Command-line interface for cryptographic authorship witnessing"
publish = false
readme = "README.md"
keywords = ["cli", "authorship", "witnessing", "attestation", "proof-of-process"]
categories = ["command-line-utilities"]
rust-version = "1.75.0"
homepage = "https://github.com/writerslogic/writerslogic"
documentation = "https://docs.rs/wld_cli"
exclude = ["tests/", "browser-extension/"]

[[bin]]
name = "wld"
path = "src/main.rs"

[[bin]]
name = "writerslogic-native-messaging-host"
path = "src/native_messaging_host.rs"

[features]
default = []
wld_jitter = ["wld_engine/wld_jitter"]

[dependencies]
wld_engine = { path = "../../crates/wld_engine", features = ["ffi"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
ed25519-dalek = "2.1"
sha2 = "0.10"
getrandom = "0.2"
hostname = "0.4"
notify = "6.1"
glob = "0.3"
tempfile = "3.10"
url = "2.5"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
ctrlc = "3.4"