[package]
name = "cpop-protocol"
version = "0.3.0"
edition = "2021"
authors = ["David Condrey <david@writerslogic.com>"]
license = "Apache-2.0"
description = "Reference implementation of the Cryptographic Proof of Process (CPoP) protocol"
repository = "https://github.com/LF-Decentralized-Trust-labs/proof-of-process"
readme = "README.md"
keywords = ["cryptography", "authentication", "cpop", "ietf", "rats"]
categories = ["cryptography", "authentication"]
rust-version = "1.75.0"
homepage = "https://lf-decentralized-trust-labs.github.io/proof-of-process/"
documentation = "https://docs.rs/cpop-protocol"
exclude = ["tests/", "fuzz/", "benches/", "certs/"]

[lib]

[dependencies]
# Cryptography
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

# Wasm
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
# Pinned to 0.2 for wasm "js" feature; getrandom 0.3 removed this feature flag.
# cpop-jitter uses getrandom 0.3 (non-wasm only). The two versions coexist because
# this dep is only enabled under the "wasm" feature gate.
getrandom = { version = "0.2", features = ["js"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CBOR encoding (RFC 8949 compliance for Proof-of-Process packets)
# Note: ciborium 0.2 does not guarantee deterministic encoding; see codec/cbor.rs module doc.
ciborium = "0.2"
coset = "0.4"

# System & Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
serde_bytes = "0.11.19"
cpop-jitter = { path = "../cpop-jitter", version = "0.2.1" }

uuid = { version = "1.0", features = ["v4", "serde"] }

# Identity & X.509
x509-cert = { version = "0.2.5", features = ["builder", "pem"] }
spki = { version = "0.7", features = ["std", "pem"] }
der = { version = "0.8", features = ["alloc", "derive"] }
const-oid = { version = "0.9", features = ["db"] }
signature = "2.2"
urlencoding = "2.1.3"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:getrandom"]

