[package]
name = "witnessd_protocol"
version = "0.1.0"
edition = "2021"
authors = ["David Condrey <david@writerslogic.com>"]
license = "AGPL-3.0-only"
description = "Core Rust implementation of the Proof-of-Process (PoP) Protocol"
repository = "https://github.com/writerslogic/witnessd"
readme = "README.md"
keywords = ["cryptography", "authentication", "pop", "ietf", "rats"]
categories = ["cryptography", "authentication"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# Cryptography
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

# Wasm
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# CBOR encoding (RFC 8949 compliance for Proof-of-Process packets)
ciborium = "0.2"
coset = "0.3"

# System & Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
serde_bytes = "0.11.19"
witnessd_jitter = { path = "../witnessd_jitter", version = "0.2.0" }

# Identity & X.509
x509-cert = { version = "0.2.5", features = ["builder", "pem"] }
spki = { version = "0.7", features = ["std", "pem"] }
der = { version = "0.7", features = ["alloc", "derive"] }
const-oid = { version = "0.9", features = ["db"] }
signature = "2.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = ["std"]
std = ["sha2/std", "hmac/std", "serde/std", "zeroize/std"]
full = ["std", "serde_json"]
apple-secure-enclave = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:getrandom"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
