[package]
name = "wld_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic engine for high-integrity document witnessing"
readme = "README.md"
keywords = ["cryptography", "authorship", "witnessing", "attestation", "proof-of-process"]
categories = ["cryptography", "authentication"]
rust-version = "1.75.0"
homepage = "https://github.com/writerslogic/writerslogic"
documentation = "https://docs.rs/wld_engine"
exclude = ["tests/", "fuzz/", "benches/"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["ffi"]

[dependencies]
# Cryptography
sha2 = "0.10.8"
hmac = "0.12.1"
ed25519-dalek = "2.1.1"
rand = "0.9.0"
bip39 = "2.1.0"
zeroize = { version = "1.8.1", features = ["derive"] }
subtle = "2.6"

# Ethereum transaction signing
k256 = { version = "0.13", features = ["ecdsa", "std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rlp = "0.5"

# Storage
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.135"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
getrandom = "0.2"
ripemd = "0.1"
der = "0.7"

# Math & Analysis
statrs = "0.18.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] } 
lazy_static = "1.5.0"

# CBOR encoding (RFC 8949 compliance for Proof-of-Process packets)
ciborium = "0.2"
coset = "0.3"  # COSE signatures for hardware attestation

# Async & System
tokio = { version = "1.43.0", features = ["full"] }
sysinfo = "0.33.1"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "socket", "user", "fs"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
raw-cpuid = "11.2.0"
base64 = "0.22.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
hex = "0.4.3"
urlencoding = "2.1"
dirs = "5.0.1"
notify = "6.1.1"
crc32fast = "1.4.2"
hkdf = "0.12.4"
hostname = "0.4.0"
rsa = "0.9.6"


# Roughtime (Rougenough crates)
roughenough-protocol = "2.0.0"
roughenough-common = "2.0.0"

# Integration
keyring = "2.3.3"
glob = "0.3.2"
toml = "0.8.19"
blake3 = "1.8.3"
chacha20poly1305 = "0.10.1"
aes-gcm = { version = "0.10", features = ["zeroize"] }
p256 = { version = "0.13", features = ["ecdh"] }

# Thread-safe concurrent collections
dashmap = "6.0"

# FFI bindings for Swift/Kotlin (via UniFFI)
uniffi = { version = "0.28", optional = true }

# WritersLogic Jitter - hardware entropy for proof-of-process
wld_jitter = { path = "../wld_jitter", version = "0.2", optional = true }
typeshare = "1.0.5"

# WritersLogic Protocol
wld_protocol = { path = "../wld_protocol", version = "0.1" }

# Windows Specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_TpmBaseServices",
] }

# macOS Specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.6"
accessibility = "0.1.6"
objc = "0.2.7"
security-framework = { version = "3.0.0", features = ["OSX_10_12"] }
security-framework-sys = "2.9.1"

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7.6"
evdev = "0.12"
input-linux = "0.6"
libc = "0.2"
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

[features]
default = []
cargo-clippy = []
secure-enclave = []
wld_jitter = ["dep:wld_jitter"]
x11 = ["x11rb"]  # Enable X11 focus detection on Linux
ffi = ["dep:uniffi"]  # UniFFI bindings for Swift (macOS GUI)

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
